--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -28,5 +28,22 @@
   <input type="submit" value="Save" />
 </form> 
 
+<form action="#" method="post" th:action="@{/brand/save}" th:object="${brand}">
+
+  <input type="hidden" th:field="*{id}" />
+  </br>
+  
+  Name:</br>
+  <input type="text" th:field="*{name}" />
+  </br>
+  
+  Product Type:</br>
+  <input type="text" th:field="*{product_type}" />
+  </br>
+  
+  </br>
+  <input type="submit" value="Save" />
+</form> 
 </body>
 </html>
+
